# graphalytics-platforms-openg

./: README.md  pom.xml  prepare-benchmark.sh
config-template/: driver.properties  openg.properties  platform.properties  system.properties
granula-model-openg/: pom.xml
granula-model-openg/src/main/resources/openg-logs/OperationLog/: driver.logs
graphalytics-platforms-openg-granula/: pom.xml
graphalytics-platforms-openg-granula/src/main/c/granula/: CMakeLists.txt  bfs.cpp  cdlp.cpp  lcc.cpp  operation.h  pr.cpp  wcc.cpp
graphalytics-platforms-openg-granula/src/main/resources/: openg.model
graphalytics-platforms-openg-platform/: pom.xml
graphalytics-platforms-openg-platform/src/main/c/: bfs.cpp  lcc.cpp  sssp.cpp  wcc.cpp
graphalytics-platforms-openg-platform/src/main/resources/: log4j2.xml
graphalytics-platforms-openg-std/: pom.xml
graphalytics-platforms-openg-std/src/main/c/: CMakeLists.txt  bfs.cpp  cdlp.cpp  lcc.cpp  pr.cpp  sssp.cpp  standalone.mk  util.hpp  wcc.cpp
graphalytics-platforms-openg-std/src/main/c/standard/: CMakeLists.txt  bfs.cpp  cdlp.cpp  lcc.cpp  pr.cpp  sssp.cpp  wcc.cpp
graphalytics-platforms-openg-std/src/main/resources/: log4j2.xml  openg.platform
note/: questions
script/: buildOpenGBinaries.sh  integration-test.sh
sh/: build.sh  prepare-benchmark.sh
src/main/assembly/: bin.xml
src/main/c/: CMakeLists.txt  bfs.cpp  cdlp.cpp  granula.hpp  lcc.cpp  pr.cpp  sssp.cpp  util.hpp  wcc.cpp
src/main/java/nl/tudelft/granula/modeller/: ModelTester.java  Type.java
src/main/java/nl/tudelft/graphalytics/openg/: GraphParser.java  OpenGGranulaPlatform.java  OpenGJob.java  OpenGPlatform.java  OpengJob.java  OpengPlatform.java
src/main/java/science/atlarge/granula/modeller/: ModelTester.java  Type.java
src/main/java/science/atlarge/graphalytics/openg/: OpengCollector.java  OpengConfiguration.java  OpengJob.java  OpengLoader.java  OpengPlatform.java
src/main/resources/: log4j2.xml  openg.platform
(+62 files in other folders)
